Background download: Propagates URL chain and response headers.

This CL propagates URL chain and response headers for in memory download
backend that is used in incognito mode for background fetch.

Bug: 863949
Change-Id: I07baff393111aaa2bd2ce2ef9965a78d299be125
Reviewed-on: https://chromium-review.googlesource.com/1142466
Reviewed-by: Min Qin <qinmin@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576282}
Former-commit-id: 5c9266c5f89cd6b808e1b00a417dba9bc8e7a535