components/download/internal/background_service/in_memory_download.cc
@@ -16,11 +16,10 @@
 
 namespace download {
 
-InMemoryDownload::InMemoryDownload(const std::string& guid, const GURL& url)
+InMemoryDownload::InMemoryDownload(const std::string& guid)
     : guid_(guid),
       state_(State::INITIAL),
       paused_(false),
-      url_chain_({url}),
       bytes_downloaded_(0u) {}
 
 InMemoryDownload::~InMemoryDownload() = default;
@@ -33,7 +32,7 @@ InMemoryDownloadImpl::InMemoryDownloadImpl(
     network::mojom::URLLoaderFactory* url_loader_factory,
     BlobTaskProxy::BlobContextGetter blob_context_getter,
     scoped_refptr<base::SingleThreadTaskRunner> io_task_runner)
-    : InMemoryDownload(guid, request_params.url),
+    : InMemoryDownload(guid),
       request_params_(request_params),
       traffic_annotation_(traffic_annotation),
       url_loader_factory_(url_loader_factory),
@@ -180,16 +179,38 @@ void InMemoryDownloadImpl::SendRequest() {
   request->headers = request_params_.request_headers;
   request->load_flags = net::LOAD_DISABLE_CACHE;
 
+  url_chain_.push_back(request_params_.url);
+
   loader_ =
       network::SimpleURLLoader::Create(std::move(request), traffic_annotation_);
+  loader_->SetOnRedirectCallback(base::BindRepeating(
+      &InMemoryDownloadImpl::OnRedirect, weak_ptr_factory_.GetWeakPtr()));
+  loader_->SetOnResponseStartedCallback(
+      base::BindRepeating(&InMemoryDownloadImpl::OnResponseStarted,
+                          weak_ptr_factory_.GetWeakPtr()));
 
   // TODO(xingliu): Use SimpleURLLoader's retry when it won't hit CHECK in
   // SharedURLLoaderFactory.
   loader_->DownloadAsStream(url_loader_factory_, this);
 }
 
+void InMemoryDownloadImpl::OnRedirect(
+    const net::RedirectInfo& redirect_info,
+    const network::ResourceResponseHead& response_head,
+    std::vector<std::string>* to_be_removed_headers) {
+  url_chain_.push_back(redirect_info.new_url);
+}
+
+void InMemoryDownloadImpl::OnResponseStarted(
+    const GURL& final_url,
+    const network::ResourceResponseHead& response_head) {
+  response_headers_ = response_head.headers;
+}
+
 void InMemoryDownloadImpl::Reset() {
   data_.clear();
+  url_chain_.clear();
+  response_headers_.reset();
   bytes_downloaded_ = 0u;
   completion_notified_ = false;
   resume_callback_.Reset();
